pagination and filtering (#17)
* add django commands

* add pagination

* add filtering

* update swagger

* add readme
